sandbox-codebase/objects/mone__Mailchimp_List_History__c/mone__Mailchimp_List_History__c.object-meta.xml
<CustomObject>
    <description>History of list stats.</description>
    <label>Mailchimp List History</label>
    <nameField>
        <label>List History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp List Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>