sandbox-codebase/objects/mone__Mailchimp_List_History__c/fields/mone__Cleaned__c.field-meta.xml
<CustomField>
    <fullName>mone__Cleaned__c</fullName>
    <label>Cleaned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>