sandbox-codebase/objects/mone__Mailchimp_List_History__c/fields/mone__Mailchimp_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_List__c</fullName>
    <label>Mailchimp List</label>
    <referenceTo>mone__Mailchimp_List__c</referenceTo>
    <relationshipLabel>Mailchimp List Histories</relationshipLabel>
    <relationshipName>Mailchimp_List_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>