sandbox-codebase/objects/mone__Mailchimp_List_History__c/fields/mone__Metric_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>mone__Metric_Timestamp__c</fullName>
    <inlineHelpText>The month and year of the metric.</inlineHelpText>
    <label>Metric Timestamp</label>
    <type>DateTime</type>
</CustomField>