sandbox-codebase/objects/mone__Mailchimp_List_History__c/fields/mone__Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>mone__Unsubscribed__c</fullName>
    <label>Unsubscribed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>